# dmso2d72-linux

./: .gitignore  README.md  pyproject.toml
re/: DMM_PROTOCOL.md  analyze.py  context.py  dispatch.py  dmm_log.jsonl  funcscan.py  ghidra_Stm32Setup.java  ghidra_scatter_emu.py
src/dmso2d72/: __init__.py  app.py  capture.py  device.py  dmm_stats.py  protocol.py  settings.py
src/dmso2d72/gui/: awg_tab.py  device_tab.py  dmm_history.py  dmm_tab.py  main_window.py  scope_tab.py  theme.py
tests/: conftest.py  fakes.py  test_dmm_stats.py  test_gui.py  test_protocol.py  test_settings.py  test_theme.py
tools/: dmm_decode_session.py  dmm_probe.py  dmm_setmode_probe.py  usb_capture.md  usbmon_filter.py
udev/: 99-dmso2d72.rules
